fixed content overflow on landing and home page

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  min-width: 100vw;
 }
 
 .App-header {
@@ -26,12 +27,13 @@ a{
 .App-main{
   min-height: 90vh;
   background-color: lightslategrey;
+  overflow: hidden;
 }
 
 .landing-content{
-  position: absolute;
+  position: relative;
   margin-left: 15%;
-  top: 20%;
+  padding-top: 5%;
 }
 
 .landing-content h{
@@ -41,9 +43,9 @@ a{
 
 .landing-content img{
   position: absolute;
-  top: 0%;
+  top: 20%;
   left: 700px;
-  transform: rotate(-20deg);
+  transform: rotate(-15deg);
   height: 500px;
   width: 800px;
   opacity: 0.4;
